--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,18 @@
       html,body {
         height:100%;
         width:100%;
+        
       }
+
+      a{
+        text-decoration:none;
+      }
+      /* body{
+        overflow: hidden;
+
+
+
+      } */
     </style> 
   </head>
   <body>
